--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -7,6 +5,10 @@
 
 # testing
 /coverage
+/cypress/downloads
+/cypress/fixtures
+/cypress/plugin
+/cypress/support
 
 # next.js
 /.next/
