--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "mongodb": "^4.6.0",
     "next": "12.1.6",
+    "nextjs-cors": "^2.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -17,6 +21,7 @@
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "cypress": "^9.6.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
